--- a/views/list.ejs
+++ b/views/list.ejs
@@ -1,30 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>To Do List</title>
-</head>
-<body>
-    <!-- <% if( kindOfDay === "Saturday" || kindOfDay === "Sunday"){ %>
-        <h1 style="color: purple;"> <%=kindOfDay%> ToDo List</h1>
-    <% } else { %>
-        <h1 style="color: blue;"> <%= kindOfDay %> Todo List</h1>
-    <% } %> -->
-    <h1> <%= kindOfDay %></h1>
-    <ul>       
+    <link rel="stylesheet" href="css/styles.css" />
+  </head>
 
-        <% for(var i = 0; i < newListItems.length; i++){ %>
-            <li> <%= newListItems[i] %> </li>
-        <% } %>
-        
-    </ul>
-    <form action="/" method="post">
-        <input type="text" name="newItem" >
+  <body>
+    <div class="box">
+      <h1 id="heading"><%= kindOfDay %></h1>
+    </div>
 
-        <button type="submit" name="button">Add</button>
-    </form>
-    
-</body>
+    <div class="box">
+      <% for(let i=0; i < newListItems.length; i++){ %>
+      <div class="item">
+        <input type="checkbox" />
+        <p>
+          <%= newListItems[i] %>
+        </p>
+      </div>
+      <% } %>
+
+      <form class="item" action="/" method="post">
+        <input type="text" name="newItem" placeholder="New Item" autocomplete="off" required autofocus />
+        <button type="submit" name="button">+</button>
+      </form>
+
+    </div>
+
+    <footer>
+        <p >Created by <a href="https://github.com/aayushxrj">Aayush</a></p>
+    </footer>          
+  </body>
 </html>
