--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,13 +1,13 @@
 html {
   background-color: #E4E9FD;
-  background-image: -webkit-linear-gradient(65deg, #A683E3 50%, #E4E9FD 50%);
-  /* min-height: 615px; */
-  height: 100vh;
+  background-image: -webkit-linear-gradient(65deg, #402099 50%, #E4E9FD 50%);
+  min-height: 1000px;
+  /* height: 100vh; */
   font-family: 'helvetica neue';
 }
 
 h1 {
-  color: #fff;
+  color: #ffffff;
   padding: 10px;
 }
 
@@ -20,7 +20,7 @@ h1 {
 }
 
 #heading {
-  background-color: #A683E3;
+  background-color: #402099;
   text-align: center;
 }
 
@@ -37,7 +37,7 @@ h1 {
 
 input:checked+p {
   text-decoration: line-through;
-  text-decoration-color: #A683E3;
+  text-decoration-color: #402099;
 }
 
 input[type="checkbox"] {
@@ -62,7 +62,7 @@ button {
   width: 50px;
   border-radius: 50%;
   border-color: transparent;
-  background-color: #A683E3;
+  background-color: #402099;
   color: #fff;
   font-size: 30px;
   padding-bottom: 6px;
@@ -82,7 +82,7 @@ input[type="text"] {
 
 input[type="text"]:focus {
   outline: none;
-  box-shadow: inset 0 -3px 0 0 #A683E3;
+  box-shadow: inset 0 -3px 0 0 #402099;
 }
 
 ::placeholder {
@@ -92,7 +92,11 @@ input[type="text"]:focus {
 
 footer {
   /* color: white; */
-  color: rgba(0, 0, 0, 0.5);
+  color: black;
   text-align: center;
   font-size: 12px;
+}
+a{
+  color: black;
+  /* text-decoration: none;   */
 }
