--- a/views/list.ejs
+++ b/views/list.ejs
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>To Do List</title>
     <link rel="stylesheet" href="css/styles.css" />
+    <link rel="icon" href="icon/icon.png" type="image/x-icon">
   </head>
 
   <body>
@@ -31,7 +32,7 @@
     </div>
 
     <footer>
-        <p >Created by <a href="https://github.com/aayushxrj">Aayush</a></p>
+        <p >Created by <a target="_blank" href="https://github.com/aayushxrj">Aayush</a></p>
     </footer>          
   </body>
 </html>
