--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -65,7 +65,7 @@ button {
   background-color: #402099;
   color: #fff;
   font-size: 30px;
-  padding-bottom: 6px;
+  /* padding-bottom: 6px; */
   border-width: 0;
 }
 
