used layouts EJS & /work & /about added

--- a/views/list.ejs
+++ b/views/list.ejs
@@ -1,17 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>To Do List</title>
-    <link rel="stylesheet" href="css/styles.css" />
-    <link rel="icon" href="icon/icon.png" type="image/x-icon">
-  </head>
+<%- include("header") -%>
 
-  <body>
     <div class="box">
-      <h1 id="heading"><%= kindOfDay %></h1>
+      <h1 id="heading"><%= listTitle %></h1>
     </div>
 
     <div class="box">
@@ -26,13 +16,12 @@
 
       <form class="item" action="/" method="post">
         <input type="text" name="newItem" placeholder="New Item" autocomplete="off" required autofocus />
-        <button type="submit" name="button">+</button>
+        <button type="submit" name="list" value= <%=listTitle%> >+</button>
       </form>
 
     </div>
 
-    <footer>
-        <p >Created by <a target="_blank" href="https://github.com/aayushxrj">Aayush</a></p>
-    </footer>          
-  </body>
-</html>
+<%- include("footer") -%>
+
+         
+
